platform/macos/libverdigrisglue/libverdigrisglue/ve_cursor.h

//
//  ve_cursor.h
//  libverdigrisglue
//
//  Created by Jeremy on 21/07/2014.
//  Copyright (c) 2014 libverdigris. All rights reserved.
//

#import <Cocoa/Cocoa.h>

void ve_cursor_show();
void ve_cursor_hide();
void ve_cursor_set(NSUInteger cursor);