platform/macos/libverdigrisglue/libverdigrisglue/VEMouse.h

//
//  VEMouse.h
//  libverdigrisglue
//
//  Created by Jeremy on 23/07/2014.
//  Copyright (c) 2014 libverdigris. All rights reserved.
//

#import <Foundation/Foundation.h>
#import "VEWindowHandler.h"

NSPoint ve_mouse_get_location();
NSPoint ve_mouse_get_global_location();